--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "autofit.js": "^3.2.8",
+    "three": "^0.176.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
+    "@types/three": "^0.176.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "@vue/eslint-config-typescript": "^14.5.0",
@@ -25,6 +28,7 @@
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
+    "sass": "^1.87.0",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
