--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "animate.css": "^4.1.1",
     "autofit.js": "^3.2.8",
     "dayjs": "^1.11.13",
+    "echarts": "^5.6.0",
+    "lodash-es": "^4.17.21",
+    "mockjs": "^1.1.0",
     "three": "^0.176.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
+    "@types/lodash-es": "^4.17.12",
+    "@types/mockjs": "^1.0.10",
     "@types/node": "^22.14.0",
     "@types/three": "^0.176.0",
     "@vitejs/plugin-vue": "^5.2.3",
